<resources>
    <string name="market">商城</string>
    <string name="market_shop">店铺详情</string>


    <!--    商城首页-->
    <string name="market_index_tip">国铁商城</string>
    <string name="market_index_search">搜索</string>
    <string name="market_index_hot">热销商品</string>
    <string name="market_index_brand">热销品牌</string>
    <string name="market_rank_shops">店铺列表</string>


    <string name="market_category_search">搜索关键字</string>


    <!--购物车-->
    <string name="market_cart">购物车</string>
    <string name="market_cart_null">空空如也</string>
    <string name="market_shop_locked">店铺已关闭</string>
    <string name="market_cart_manager">管理</string>
    <string name="market_cart_complement">完成</string>
    <string name="market_cart_total">合计:&#160;&#160;</string>
    <string name="market_cart_order">下一步</string>
    <string name="market_cart_commit">提交</string>
    <string name="market_cart_pay">¥%s</string>
    <string name="market_cart_hot">热销商品</string>
    <string name="market_cart_selall">全选</string>
    <string name="market_cart_collect">移入收藏</string>
    <string name="market_cart_collect_out">移出收藏</string>
    <string name="market_cart_del">删除</string>
    <string name="market_cart_dprice">&#160;&#160;%s&#160;&#160;</string>


    <!--商店-->
    <string name="market_shop_sale">销量</string>
    <string name="market_shop_all">综合</string>
    <string name="market_shop_price">价格</string>
    <string name="market_shop_sel">筛选</string>


    <!-- 搜索结果页 -->
    <string name="search_result_onSale">商品</string>
    <string name="search_result_common">综合</string>
    <string name="search_result_price">价格</string>
    <string name="search_result_time">时间</string>
    <string name="search_result_sales">销量</string>
    <string name="search_result_search">搜索</string>


    <!-- 商品详情页-->
    <string name="product_details_productInfo">商品信息</string>
    <string name="product_details_packageList">包装清单</string>
    <string name="product_details_service">售后服务</string>
    <string name="product_details_recommend">推荐单位</string>
    <string name="product_details_delivery">店铺满%s元包邮</string>


    <!--提交结果页面-->
    <string name="market_result_orderlist">查看采购单</string>
    <string name="market_result_appraise">立即评价</string>
    <string name="market_result_hot">热销商品</string>


    <!--分类-->
    <string name="market_category_bold">1</string>
    <string name="market_category_normal">0</string>

    <!--店铺详情-->
    <string name="shop_mobile_is">联系电话：</string>
    <string name="shop_organizeName_is">供应商：</string>
    <string name="url_head">https:</string>
    <string name="rmb">¥</string>


    <string name="market_rank_num">近7日累计下单&#160;%s&#160;次</string>
    <string name="searchProducts">搜索店铺内商品</string>
    <string name="searchInShop">搜本店</string>
    <string name="text_shop">店铺</string>
    <string name="text_collect">收藏</string>
    <string name="text_cart">购物车</string>
    <string name="text_zero">0</string>
    <string name="text_add_to_cart">加入购物车</string>
    <string name="clean_invalid_sku">清空失效商品</string>

</resources>