<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginTop="@dimen/dp_25">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/common_border"
            android:paddingRight="@dimen/dp_10"
            android:src="@drawable/svg_back_black" />


        <TextView
            android:id="@+id/tv_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/btn_back"
            android:text="@string/market_cart"
            android:textColor="@color/font_black"
            android:textSize="@dimen/font_size_20"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_manager"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/common_border"
            android:text="@string/market_cart_manager"
            android:textColor="@color/font_black"
            android:textSize="@dimen/font_size_14" />


    </RelativeLayout>


    <com.rails.purchaseplatform.common.widget.BaseSwipeLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom"
        android:layout_below="@+id/titleBar">


        <com.rails.purchaseplatform.common.widget.BaseCoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:contentScrim="?attr/colorPrimary"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">


                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <com.rails.purchaseplatform.common.widget.BaseRecyclerView
                            android:id="@+id/cartRecycler"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:overScrollMode="never"
                            app:canH="false"
                            app:canV="false" />

                        <com.rails.purchaseplatform.common.widget.EmptyView
                            android:id="@+id/empty"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:minHeight="500dp"
                            android:visibility="gone" />

                    </FrameLayout>


                </com.google.android.material.appbar.CollapsingToolbarLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <com.rails.purchaseplatform.common.widget.LoadMoreRecyclerView
                android:id="@+id/recRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_8"
                android:overScrollMode="never"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        </com.rails.purchaseplatform.common.widget.BaseCoordinatorLayout>


    </com.rails.purchaseplatform.common.widget.BaseSwipeLayout>


    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_alignParentBottom="true">

        <View style="@style/line_thin_shade" />


        <ImageView
            android:id="@+id/img_total"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginRight="@dimen/dp_10"
            android:padding="@dimen/dp_5"
            android:src="@drawable/selector_circle" />


        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_toLeftOf="@+id/btn_commit"
            android:text="@string/market_cart_total"
            android:textColor="@color/font_black_light"
            android:textSize="@dimen/font_size_16" />


        <TextView
            android:id="@+id/btn_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dp_15"
            android:background="@drawable/bg_corner_blue_20"
            android:paddingLeft="@dimen/dp_20"
            android:paddingTop="@dimen/dp_8"
            android:paddingRight="@dimen/dp_20"
            android:paddingBottom="@dimen/dp_8"
            android:text="@string/market_cart_order"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_16" />


    </RelativeLayout>

</RelativeLayout>