<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="shopInfo"
            type="com.rails.lib_data.bean.shop.ShopInfoBean" />

    </data>

    <FrameLayout
        android:background="@color/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/swipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.rails.purchaseplatform.common.widget.BaseCoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.appbar.AppBarLayout
                    android:id="@+id/bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                    <com.google.android.material.appbar.CollapsingToolbarLayout
                        android:id="@+id/collapsing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:contentScrim="?attr/colorPrimary"
                        app:layout_scrollFlags="scroll|exitUntilCollapsed">


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:paddingTop="@dimen/dp_25"
                            android:paddingBottom="@dimen/dp_25">

                            <com.rails.purchaseplatform.common.widget.RatioImage
                                android:id="@+id/img_shop"
                                imgUrl='@{@string/url_head+shopInfo.logoUrl}'
                                android:layout_width="@dimen/dp_70"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/common_border"
                                android:background="@drawable/shape_bg_img_stroke"
                                android:padding="@dimen/paddingS"
                                app:h="7"
                                app:w="7" />

                            <TextView
                                android:id="@+id/tv_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignTop="@+id/img_shop"
                                android:layout_marginStart="@dimen/dp_10"
                                android:layout_toStartOf="@+id/tv_level"
                                android:layout_toEndOf="@+id/img_shop"
                                android:text="@{shopInfo.shopName}"
                                android:textColor="@color/font_black"
                                android:textSize="@dimen/font_size_16" />


                            <TextView
                                android:id="@+id/tv_level"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBaseline="@+id/tv_name"
                                android:layout_alignParentEnd="true"
                                android:layout_marginEnd="@dimen/common_border"
                                android:drawablePadding="@dimen/dp_5"
                                android:text="@{shopInfo.creditLevel}"
                                android:textColor="@color/font_black_light"
                                android:textSize="@dimen/font_size_12"
                                app:drawableLeftCompat="@drawable/ic_shop_defend" />


                            <TextView
                                android:id="@+id/tv_phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignStart="@+id/tv_name"
                                android:layout_alignBottom="@+id/img_shop"
                                android:layout_marginEnd="@dimen/common_border"
                                android:layout_marginBottom="@dimen/dp_6"
                                android:text='@{@string/shop_mobile_is+shopInfo.mobile}'
                                android:textColor="@color/font_gray"
                                android:textSize="@dimen/font_size_12" />


                        </RelativeLayout>


                    </com.google.android.material.appbar.CollapsingToolbarLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_45"
                        android:background="@color/bg"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/dp_3">


                        <!--综合-->
                        <CheckBox
                            android:layout_marginStart="@dimen/paddingL"
                            android:id="@+id/rb_all"
                            style="@style/market_tab"
                            android:layout_weight="1"
                            android:drawablePadding="@dimen/dp_3"
                            android:gravity="center"
                            android:text="@string/market_shop_all"
                            android:textColor="@color/selector_blue_gray_sel_color" />

                        <!--销量-->
                        <FrameLayout
                            android:id="@+id/ll_sale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <CheckBox
                                android:id="@+id/rb_sale"
                                style="@style/market_tab"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:drawableEnd="@drawable/selector_arrow"
                                android:gravity="center"
                                android:text="@string/market_shop_sale"
                                android:textColor="@color/selector_blue_gray_sel_color" />
                        </FrameLayout>


                        <!--价格-->
                        <FrameLayout
                            android:id="@+id/ll_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <CheckBox
                                android:id="@+id/rb_price"
                                style="@style/market_tab"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:drawableEnd="@drawable/selector_arrow"
                                android:gravity="center"
                                android:text="@string/market_shop_price"
                                android:textColor="@color/selector_blue_gray_sel_color" />

                        </FrameLayout>


                        <!--筛选-->
                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center">

                            <CheckBox
                                android:id="@+id/rb_sel"
                                android:layout_gravity="center"
                                style="@style/market_tab"
                                android:layout_width="wrap_content"
                                android:checked="false"
                                android:drawableEnd="@drawable/svg_sel_gray"
                                android:drawablePadding="@dimen/dp_3"
                                android:gravity="center"
                                android:text="@string/market_shop_sel"
                                android:textColor="@color/font_gray" />

                        </FrameLayout>


                    </LinearLayout>

                </com.google.android.material.appbar.AppBarLayout>


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">


                    <com.rails.purchaseplatform.common.widget.BaseRecyclerView
                        android:id="@+id/recRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="@dimen/dp_8"

                        android:paddingEnd="@dimen/dp_8"
                        android:overScrollMode="never"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                    <com.rails.purchaseplatform.common.widget.EmptyView
                        android:id="@+id/empty"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone" />

                </FrameLayout>


            </com.rails.purchaseplatform.common.widget.BaseCoordinatorLayout>

        </com.scwang.smartrefresh.layout.SmartRefreshLayout>


        <ImageView
            android:id="@+id/img_top"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/common_border"
            android:layout_marginBottom="@dimen/common_border"
            android:padding="@dimen/dp_5"
            android:src="@drawable/ic_go_top"
            android:visibility="gone"
            tools:ignore="ContentDescription" />

    </FrameLayout>
</layout>

